--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
+    "@angular/forms": "^14.2.10",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "ng-zorro-antd": "^14.1.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
