--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "date-fns": "^2.29.3",
     "ng-zorro-antd": "^14.1.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.6.8",
+    "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
